--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "react-verification-input": "^4.2.2",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
